<resources>
    <string name="app_name">Swoosh</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="logo">Logo</string>
    <string name="background_image">Background image</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="get_started">Get started</string>
	<string name="bg_image">BG image</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-ed beginner league near you…</string>
</resources>
