<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">
	
	<ImageView
		android:id="@+id/mainBG"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:contentDescription="@string/bg_image"
		android:scaleType="centerCrop"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@drawable/beginnerballerbg" />
	
	<ImageView
		android:id="@+id/Logo"
		android:layout_width="88dp"
		android:layout_height="29dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="8dp"
		android:contentDescription="@string/logo"
		android:scaleType="fitCenter"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/swooshlogo" />
	
	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:fontFamily="@font/montserrat"
		android:text="@string/i_am_a"
		android:textColor="@color/colorText"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/Logo" />
	
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView5">
		
		<ToggleButton
			android:id="@+id/tglBegginer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_weight="1"
			android:background="@drawable/swoosh_toggle"
			android:fontFamily="@font/montserrat"
			android:onClick="onTglBegginerClick"
			android:text="@string/beginner"
			android:textColor="@color/colorText"
			android:textOff="@string/beginner"
			android:textOn="@string/beginner" />
		
		<ToggleButton
			android:id="@+id/tglBaller"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_weight="1"
			android:background="@drawable/swoosh_toggle"
			android:fontFamily="@font/montserrat"
			android:onClick="onTglBallerClick"
			android:text="@string/baller"
			android:textColor="@color/colorText"
			android:textOff="@string/baller"
			android:textOn="@string/baller"
			tools:text="BALLER" />
	</LinearLayout>
	
	<Button
		android:id="@+id/btnFinish"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/swoosh_button"
		android:fontFamily="@font/montserrat"
		android:onClick="onBtnFinishClick"
		android:text="@string/finish"
		android:textColor="@color/colorText"
		app:layout_constraintBottom_toBottomOf="@+id/mainBG"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>